--- a/bootstrap-5.2.1/config.yml
+++ b/bootstrap-5.2.1/config.yml
@@ -1,6 +1,7 @@
 languageCode:           "en"
 title:                  "Bootstrap"
 baseURL:                "https://getbootstrap.com"
+theme: minima
 
 security:
   enableInlineShortcodes: true
