add relative path links to js + css

--- a/fafreev6search/manifest.json
+++ b/fafreev6search/manifest.json
@@ -6,6 +6,8 @@
     "author": "Timothy Scholl",
     "action":{
         "default_popup": "index.html",
-        "default_title": "FAv6 free icon search"
+        "default_title": "FAv6 free icon search",
+        "default_icon": "/faflag.png"
+
     }
 }
